# python-password-cracker-demo

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py
data/: wordlist.txt
src/password_cracker_demo/: __init__.py  main.py
